Fixed a setting window layout issue (mobile)

--- a/src/sass/media-query.sass
+++ b/src/sass/media-query.sass
@@ -29,17 +29,17 @@
     #setting-window form::after
         left: 86.2%
 
-@media screen and (max-height: 370px)
+@media screen and (max-height: 380px)
     #setting-window form::before
-        bottom: 89%
+        bottom: 90%
         left: 100%
         border-color: transparent transparent transparent #979797
     
     #setting-window form::after
-        bottom: 89.7%
+        bottom: 90.4%
         left: 100%
-        border-color: transparent transparent transparent #EEEEEE 
+        border-color: transparent transparent transparent white
 
     #setting-window 
         left: -343px
-        top: -28px
+        top: -30px
