--- a/src/sass/nav-bar.sass
+++ b/src/sass/nav-bar.sass
@@ -106,7 +106,6 @@
 
 
 .setting-window__item-wrapper
-    margin-bottom: 15px
     background: white
     padding: 8px
     border-radius: 4px
